src/stats/Stats.scss
@import '../variables.scss';
@import '../mixins.scss';

.stats-container {
    @include flexbox(flex, column, flex-start, flex-start);
    height: calc(95vh - 2.5rem);
    overflow-x: hidden;
    overflow-y: auto;
    
    .other-stats-container {
      @include flexbox(flex, row, space-around, center);
      @include content(20%, 100%, null);

      .stats-basic {
        @include flexbox(flex, column, center, center);
        @include content(100%, 20%, null);
        white-space: nowrap;
        min-width: 195px;
        
        p {
          font-size: $font4;
          border-bottom: 2px solid $dark3;
          padding: 0rem 1rem;
          margin: 0;
        }

        .stat {
          padding: 1rem;
          font-size: $font1;

          span {
            font-size: $font2;
          }
        }
      }
    }

    .graph-container {
      @include content(90%, 100%, null);
      display: flex;
      justify-content: center;
      flex-wrap: wrap;

      .line-graph {
        @include content(270px, 45%, null);
        display: flex;
        flex-direction: column;
        position: relative;
        padding: 0rem 1rem;
        margin-right: 1rem;
        min-width: 400px;
        overflow: hidden;
  
        p {
          font-size: $font4;
          flex: 0 0 auto;
        }

        canvas, .chart-wrapper {
          flex: 1 1 auto;
          width: 100%;
          min-height: 0;
        }
  
        &.full-year {
          position: relative;
          @include content(240px, 100%, null);
          overflow-x: auto;
          overflow-y: hidden;

          .chart-wrapper {
            min-width: 3650px;
            height: calc(100% - 70px);
          }
        }
      }
    }


}

